--- a/thesis_frontend/web/index.html
+++ b/thesis_frontend/web/index.html
@@ -29,7 +29,7 @@
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="favicon.png"/>
 
-  <title>thesis_frontend</title>
+  <title>Closer</title>
   <link rel="manifest" href="manifest.json">
 </head>
 <body>
